Job run on boot. Loop while true in powerplug

--- a/measurement1h.yaml
+++ b/measurement1h.yaml
@@ -2,5 +2,5 @@ name: "Temperature and energy measurement for 1h"
 entrypoint: power_plug_main.toit
 
 triggers:     
-     on_boot: false    
+     on_boot: true    
      on_install: true
